fixed layout issues

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -78,7 +78,7 @@ ul, ol {
   margin-bottom: 15px;
 }
 li {
-  color: #888580;
+  /*color: #888580;*/
 }
 
 hr {
